# agentic-devops-platform

./: .gitignore  .markdownlint.json  =  AGENTS.md  AGENT_CATALOG.md  ANALISE_E_MELHORIAS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile.rhdh-custom  ENTERPRISE_REVIEW.md  INVENTORY.md  PROJECT_DOCUMENTATION.md  QUICKSTART.es.md  QUICKSTART.md  QUICKSTART.pt-BR.md  README.es.md  README.md  README.pt-BR.md  REPOSITORY_COMPLETENESS.md  SECURITY.md  SKILL.md  agentic-devops-platform.sln  apm.yml  patch.py  pull-secret-ARO.txt
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
agents-templates/: ado-integration.agent.md  architect.agent.md  azure-portal-deploy.agent.md  deploy.agent.md  docs.agent.md  onboarding.agent.md  platform.agent.md  rhdh-architect.agent.md  security.agent.md  sre.agent.md  template-engineer.agent.md  test.agent.md
argocd/: README.md  repo-credentials.yaml  sync-policies.yaml
backstage/: catalog-info.yaml
config/: README.md  apm.yml  region-availability.yaml  sizing-profiles.yaml
deploy/: README.md
docs/: BRANCHING_STRATEGY.md  COMPONENT_INTEGRATION.md  README.md  (+8 more)
golden-paths/h1-foundation/python-fastapi/skeleton/: Dockerfile  README.md  catalog-info.yaml  pyproject.toml
golden-paths/h1-foundation/python-fastapi/skeleton/.devcontainer/: devcontainer.json
golden-paths/h1-foundation/python-fastapi/skeleton/.github/workflows/: ci.yaml
golden-paths/h1-foundation/python-fastapi/skeleton/src/app/: main.py
golden-paths/h1-foundation/python-fastapi/skeleton/src/app/routes/: health.py
(+722 files in other folders)
